LPD-54657 Gradle workspace plugin prints out a cryptic error for LTS versions saying it can't figure out the tomcat version if you don't add LTS to the workspace product name, so fix it for the user

--- a/buildSrc/src/main/groovy/docker-common.gradle
+++ b/buildSrc/src/main/groovy/docker-common.gradle
@@ -2,4 +2,42 @@ import com.liferay.docker.workspace.environments.Config
 
 ext {
 	config = new Config(project)
+
+	updateGradleLocalProperties = {
+		Map<String, String> newProperties ->
+
+		File gradleLocalPropertiesFile = file("gradle-local.properties")
+
+		List<String> seenProperties = []
+		List<String> gradleLocalPropertiesLines = []
+
+		if (gradleLocalPropertiesFile.exists()) {
+			gradleLocalPropertiesLines = gradleLocalPropertiesFile.readLines().collect {
+				String line ->
+
+				String newLine = newProperties.find {
+					if (line.startsWith("${it.key}=")) {
+						seenProperties.add(it.key)
+						return "${it.key}=${it.value}"
+					}
+				}
+
+				return newLine != null ? newLine : line
+			}
+		}
+
+		gradleLocalPropertiesFile.withOutputStream {
+			BufferedOutputStream outputStream ->
+
+			gradleLocalPropertiesLines.each {
+				outputStream << it << "\n"
+			}
+
+			newProperties.each {
+				if (!seenProperties.contains(it.key)) {
+					outputStream << it.key << "=" << it.value << "\n"
+				}
+			}
+		}
+	}
 }
