LPD-54657 liferay-workspace-docker-environments: build.gradle: SF: separate lines

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,8 @@ tasks.register("shareWorkspace", Zip) {
 }
 
 tasks.register("restart") {
-	dependsOn ":stop", ":start"
+	dependsOn ":start"
+	dependsOn ":stop"
 }
 
 tasks.register("start") {
