--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -1,3 +1,5 @@
+import com.liferay.docker.workspace.environments.Util
+
 import de.undercouch.gradle.tasks.download.Download
 
 import java.nio.file.Path
@@ -88,28 +90,10 @@ tasks.register("prepareHotfixes", Download) {
 }
 
 tasks.register("fixWorkspaceProduct") {
-	doFirst {
-		if (config.product == null) {
-			return
-		}
+	onlyIf("product is set") { config.product != null }
 
-		if (config.product.contains(".q1.")) {
-			if (config.product.startsWith("dxp-2024.")) {
-				if (config.product.endsWith("-lts")) {
-					config.product = config.product.substring(0, config.product.length() - 4)
-				}
-			}
-			else {
-				if (!config.product.endsWith("-lts")) {
-					config.product = config.product + "-lts"
-				}
-			}
-		}
-		else if (config.product.contains(".q")) {
-			if (config.product.endsWith("-lts")) {
-				config.product = config.product.substring(0, config.product.length() - 4)
-			}
-		}
+	doLast {
+		config.product = Util.fixReleaseKey(config.product)
 
 		if (!config.product.equals(project.gradle.liferayWorkspace.product)) {
 			project.updateGradleLocalProperties([
