--- a/buildSrc/src/main/groovy/docker-common.gradle
+++ b/buildSrc/src/main/groovy/docker-common.gradle
@@ -6,10 +6,76 @@ import groovy.json.JsonSlurper
 ext {
 	config = new Config(project)
 
+	executeSQLQuery = {
+		String sql, String schema = null ->
+
+		if (!config.useDatabase) {
+			throw new GradleException("Database service not detected")
+		}
+
+		waitForContainer("database", "${config.namespace}-database")
+
+		if (config.useDatabaseMySQL) {
+			List<String> results = waitForCommand("${getDatabaseAccessCommand(schema)} --batch --execute=\"${sql}\"").split("\n")
+
+			String[] columnHeaders = results[0].split("\t")
+			
+			return results.subList(1, results.size()).collect {
+				[columnHeaders, it.split("\t")].transpose().collectEntries {
+					[it[0], it[1]]
+				}
+			}
+		}
+
+		if (config.useDatabasePostgreSQL) {
+			if (schema == null || schema.equals(config.databaseName)) {
+				schema = "public"
+			}
+
+			List<String> results = waitForCommand("${getDatabaseAccessCommand(schema)} --quiet --csv --command=\"${sql}\"").split("\n")
+
+			String[] columnHeaders = results[0].split(",")
+
+			return results.subList(1, results.size()).collect {
+				Map<String, String> result = new TreeMap<String, String>(String.CASE_INSENSITIVE_ORDER)
+				
+				result.putAll([columnHeaders, it.split(",")].transpose().collectEntries {
+					[it[0], it[1]]
+				})
+
+				return result
+			}
+		}
+
+		throw new GradleException("Unrecognized database type")
+	}
+
 	fixProductVersion = {
 		String productVersion ->
 
 		return Util.fixReleaseKey(productVersion)
+	}
+
+	getDatabaseAccessCommand = {
+		String schema ->
+
+		if (config.useDatabaseMySQL) {
+			String command = "docker compose exec -it database mysql --user root"
+
+			if (schema != null) {
+				command += " --database=${schema}"
+			}
+
+			return command
+		}
+		
+		if (config.useDatabasePostgreSQL) {
+			if (schema == null || schema.equals(config.databaseName)) {
+				schema = "public"
+			}
+
+			return "docker compose exec -e PGPASSWORD=password -e PGOPTIONS=\"--search_path=${schema}\" -it database psql --username=liferay --dbname=${config.databaseName}"
+		}
 	}
 
 	updateGradleLocalProperties = {
