LPD-58364 Look up the administrator users from the database automatically as part of startup

--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,8 @@ composeUp {
 	doFirst {
 		println "Using config:\n\n${config}\n\n"
 	}
+
+	finalizedBy ":listAdminUsers"
 }
 
 Map<String, String> environmentMap = [:]
