LPD-61073 liferay-workspace-docker-environments: fails CI if any SF changes are detected

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ plugins {
 	id "docker-liferay-bundle"
 }
 
+if (Boolean.getBoolean("env.mode.ci")) {
+	formatSource {
+		failOnAutoFix = true
+	}
+}
+
 gradle.liferayWorkspace {
 	dockerImageId = config.liferayDockerImageId
 }
