--- a/.github/workflows/source-format.yaml
+++ b/.github/workflows/source-format.yaml
@@ -7,6 +7,6 @@ jobs:
                 with:
                     distribution: zulu
                     java-version: "21"
-            -   run: ./gradlew formatSource
+            -   run: ./gradlew formatSource -Denv.mode.ci=true
 name: source-formatter
 on: [pull_request]
