--- a/gradle.properties
+++ b/gradle.properties
@@ -43,7 +43,8 @@ lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
 lr.docker.environment.service.enabled[mysql]=false
 lr.docker.environment.service.enabled[postgres]=false
-lr.docker.environment.service.enabled[webserver]=false
+lr.docker.environment.service.enabled[webserver_http]=false
+lr.docker.environment.service.enabled[webserver_https]=false
 
 # Optional
 #
