LPD-58364 liferay-workspace-docker-environments: adds printBundleInfo task to show information about the Liferay bundle and how to deploy changes

--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,7 @@ composeUp {
 	}
 
 	finalizedBy ":listAdminUsers"
+	finalizedBy ":printBundleInfo"
 }
 
 Map<String, String> environmentMap = [:]
