LPD-61336 add the option to enable Glowroot

--- a/gradle.properties
+++ b/gradle.properties
@@ -85,3 +85,8 @@ lr.docker.environment.cluster.nodes=0
 #
 # The comma-delimited list of hostnames (domains) used to access Liferay when using a webserver.
 lr.docker.environment.web.server.hostnames=localhost
+
+# Optional
+#
+# Set to 'true' to enable Glowroot.
+lr.docker.environment.glowroot=false
