--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,11 @@ lr.docker.environment.service.enabled[webserver_https]=false
 
 # Optional
 #
+# Set to "false" or "0" if you want to persist volume data between restarts
+lr.docker.environment.clear.volume.data=true
+
+# Optional
+#
 # Relative or absolute path to a directory containing data for the containers.
 # These directories created from running docker-compose instances using:
 #
