--- a/gradle.properties
+++ b/gradle.properties
@@ -90,3 +90,13 @@ lr.docker.environment.web.server.hostnames=localhost
 #
 # Set to 'true' to enable Glowroot.
 lr.docker.environment.glowroot=false
+
+# Optional
+#
+# Set to 'true' or '1' to enable the YourKit integration.
+lr.docker.environment.yourkit.enabled=false
+
+# Optionel
+#
+# The download URL of the YourKit agent.
+lr.docker.environment.yourkit.url=https://www.yourkit.com/download/docker/YourKit-JavaProfiler-2025.3-docker.zip
