--- a/build.gradle
+++ b/build.gradle
@@ -98,10 +98,13 @@ clean {
 	dependsOn ":cleanPrepareHotfixes"
 	dependsOn ":cleanPrepareSelfSignedCert"
 	dependsOn ":cleanPrepareWebserverConfig"
+	dependsOn ":cleanDownloadYourKitAgentZip"
+	dependsOn ":cleanPrepareYourKitAgent"
 }
 
 dockerDeploy {
 	dependsOn ":prepareHotfixes"
+	dependsOn ":prepareYourKitAgent"
 }
 
 composeBuild {
