LPD-57125 Since we expect CSEs will use workspaces, default to the current folder name automatically for the namespace to take advantage of not deleting volumes on every restart

--- a/gradle.properties
+++ b/gradle.properties
@@ -71,11 +71,12 @@ lr.docker.environment.database.partitioning.enabled=false
 # downloaded and copied to the Liferay container before startup.
 lr.docker.environment.hotfix.urls=
 
-# Required
+# Optional
 #
-# The namespace to use for the docker-compose instance.
-# You should not need to change this.
-lr.docker.environment.namespace=LRWSDE
+# The namespace to use for the docker-compose instance. If not set, defaults to
+# the name of the Gradle root project, which is the current folder's name if not
+# set in settings.gradle. In general, you should not need to change this.
+#lr.docker.environment.namespace=LRWSDE
 
 # The number of cluster nodes to start up in addition to the main Liferay
 # instance. Setting this to 0 means there is no clustering.
