LPD-60492 simplify prepareYourKitAgent task
For the downloadYourKitAgentZip task:
- explicitly declare the output file of the download task to be a zip so
  we can reference it in the prepare task
- have the download task download to a sub-directory of the project
  build directory

For the prepareYourKitAgent task:
- make the prepareYourKitAgent a Copy task
- call zipTree directly on the download task's dest property since it is
  now a zip file
- uses an eachFile statement to leverage the FileCopyDetails API so we
  can define the copied file's path relative to the copy destination
- remove the explicit cleanup of the downloaded zip since it now lives
  in the build directory and will be cleaned up during a normal clean
  task execution

--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -163,33 +163,22 @@ tasks.register("downloadYourKitAgentZip", Download) {
 		config.yourKitEnabled
 	}
 
-	dest project.layout.dir(project.provider {project.file("tmp")})
+	dest layout.buildDirectory.file("downloadYourKitAgentZip/YourKit.zip")
 
 	overwrite true
 
 	src config.yourKitUrl
 }
 
-tasks.register("prepareYourKitAgent") {
+tasks.register("prepareYourKitAgent", Copy) {
 	dependsOn ":downloadYourKitAgentZip"
 
-	File targetDir = file("configs/common/yourkit")
-	outputs.dir(targetDir)
-
-	doFirst {
-		File yourKitZipFile = project.fileTree("tmp") {
-			include "YourKit*.zip"
-		}.singleFile
-
-		File yourKitAgentFile = zipTree(yourKitZipFile).matching {
-			include '**/bin/linux-x86-64/libyjpagent.so'
-		}.singleFile
-
-		copy {
-			from yourKitAgentFile
-			into targetDir
-		}
-
-		yourKitZipFile.delete()
+	eachFile {
+		it.relativePath = RelativePath.parse(true, it.name)
 	}
+
+	from zipTree(downloadYourKitAgentZip.dest)
+	include "**/linux-x86-64/libyjpagent.so"
+	includeEmptyDirs false
+	into "configs/common/yourkit"
 }
