LPD-60492 uses the same onlyIf statement for each task

--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -171,6 +171,10 @@ tasks.register("downloadYourKitAgentZip", Download) {
 }
 
 tasks.register("prepareYourKitAgent", Copy) {
+	onlyIf("using YourKit") {
+		config.yourKitEnabled
+	}
+
 	dependsOn ":downloadYourKitAgentZip"
 
 	eachFile {
