--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,7 @@ lr.docker.environment.compose.files=
 # Enable each service or "service" that you would like to include in your
 # environment. If the value is "true" or "1", the service is enabled. Any other
 # value (or a blank value) is ignored and disables the service.
+lr.docker.environment.service.enabled[db2]=false
 lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
 lr.docker.environment.service.enabled[mysql]=false
