LPD-60492 choose the correct YourKit agent based on architecture

--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -182,7 +182,14 @@ tasks.register("prepareYourKitAgent", Copy) {
 	}
 
 	from zipTree(downloadYourKitAgentZip.dest)
-	include "**/linux-x86-64/libyjpagent.so"
+
+	if (config.isARM) {
+		include "**/linux-arm-64/libyjpagent.so"
+	}
+	else {
+		include "**/linux-x86-64/libyjpagent.so"
+	}
+
 	includeEmptyDirs false
 	into "configs/common/yourkit"
 }
