LPD-56141 Use script to create database with 32k tablespace

--- a/compose-recipes/db2/Dockerfile
+++ b/compose-recipes/db2/Dockerfile
@@ -4,3 +4,7 @@ RUN mkdir /var/custom
 RUN touch /startup_log.txt
 
 RUN sed -i -E 's,(^.*)(while :),\1echo "STARTING_UP" > /startup_log.txt\n\1\2,' /var/db2_setup/lib/setup_db2_instance.sh
+
+COPY create-lportal.sh /var/custom
+
+RUN chmod a+x /var/custom/create-lportal.sh
