LPD-62016 makes property name consistent with other feature activations

--- a/gradle.properties
+++ b/gradle.properties
@@ -89,7 +89,7 @@ lr.docker.environment.web.server.hostnames=localhost
 # Optional
 #
 # Set to 'true' to enable Glowroot.
-lr.docker.environment.glowroot=false
+lr.docker.environment.glowroot.enabled=false
 
 # Optional
 #
