--- a/compose-recipes/db2/service.db2.yaml
+++ b/compose-recipes/db2/service.db2.yaml
@@ -11,6 +11,7 @@ services:
             start_period: 5m
             test: ./opt/ibm/db2/V11.5/bin/db2gcf -s && grep 'STARTING_UP' /startup_log.txt
             timeout: 20s
+        platform: linux/x86_64
         privileged: true
         ports:
             -   "50000:50000"
